contrast fixed

--- a/chamber/styles/mobile.css
+++ b/chamber/styles/mobile.css
@@ -590,7 +590,7 @@ form input[type=submit]:hover {
 }
 
 .bronze-color {
-    background-color: #cd7f32;
+    background-color: #d39455;
     color: #000;
 }
 
